# trend-lab-skillpack-studio-260712

./: README.md  pyproject.toml
src/skillpack_studio/: main.py
tests/: test_smoke.py
