[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillpack-studio"
version = "0.1.0"
description = "Tiny CLI and previewer for AI assistant skill packs."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SkillPack Studio" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
skillpack = "skillpack_studio.main:main"

[tool.setuptools.packages.find]
where = ["src"]
